[package]
name = "chat"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/discord-chat-stats"
homepage = "https://github.com/udoprog/discord-chat-stats"
documentation = "https://docs.rs/discord-chat-stats"
description = """
Helpers for fusing asynchronous computations.
"""

[dependencies]
anyhow = "1.0.37"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
plotters = "0.3.0"
chrono = "0.4.19"
argwerk = "0.16.1"
